# it-academy-tasks

./: pyproject.toml
tasks/: additional_task_1.py  additional_task_2.py
