[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Sasha K <a.kosak.mbx@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

